# tidypolars4sci

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
case-studies/pivot-wide/: index.html
case-studies/regression-table/: index.html
comparing/: index.html
docs/: #releases.md#  api.md  index.md
docs/case-studies/: regression-table.md
docs/performance/: overview.md  performance.md
docs/src/: gen_ref_pages.py
docs/usage/: from-to-pandas-polars.md  from-to-pandas-polars.org  installation.md  read.md  read.org  usage.md  usage.org  write.md  write.org
docs/usage/data-manipulation/: mutate.md
performance/: performance.org
performance/filter/: index.html
performance/overview/: index.html
performance/performance/: index.html
performance/pivot-wide/: index.html
performance/summarise/: index.html
releases/: index.html
search/: search_index.json
site/: 404.html  CNAME  index.html  sitemap.xml
site/_css/: extra.css
site/api/: index.html
site/case-studies/: regression-table.org
site/comparing/: index.html
site/performance/: overview.org  performance.org
site/releases/: index.html
site/search/: search_index.json
tidypolars4sci/: __init__.py  funs.py  helpers.py  io.py  io_r.py  stats.py  stringr.py  tibble_df.py  type_conversion.py  utils.py
tidypolars4sci/data/: __init__.py  diamonds.py  mtcars.py  starwars.py  vote.py
usage/: usage.org
usage/data-manipulation/: mutate.org
usage/installation/: index.html
usage/usage/: index.html
(+18 files in other folders)
